[package]
name = "ethcontract"
version = "0.2.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
keywords = ["web3", "ethereum", "contract", "async"]
description = """
Runtime library and proc macro for interacting and generating type-safe bindings
to Ethereum smart contracts.
"""

[lib]
name = "ethcontract"

[features]
default = []
samples = []

[workspace]
members = [
  "common",
  "derive",
  "generate",
  "examples/generate",
]

[dependencies]
ethcontract-common = { version = "0.2.0", path = "./common" }
ethcontract-derive = { version = "0.2.0", path = "./derive" }
ethsign = "0.7"
futures = { version = "0.3", features = ["compat"] }
futures-timer = "2.0"
jsonrpc-core = "11.0"
lazy_static = "1.4"
pin-project = "0.4"
rlp = "0.4"
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
web3 = "0.8"
