[package]
name = "ethcontract"
version = "0.7.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
keywords = ["web3", "ethereum", "contract", "async"]
description = """
Runtime library and proc macro for interacting and generating type-safe bindings
to Ethereum smart contracts.
"""

[lib]
name = "ethcontract"

[features]
default = ["derive"]
derive = ["ethcontract-derive"]
samples = []

[workspace]
members = [
  "common",
  "derive",
  "generate",
  "examples/generate",
]

[dependencies]
ethabi_9_0 = { package = "ethabi", version = "9.0" }
ethcontract-common = { version = "0.7.1", path = "./common" }
ethcontract-derive = { version = "0.7.1", path = "./derive", optional = true}
futures = { version = "0.3", features = ["compat"] }
futures-timer = "3.0"
hex = "0.4"
jsonrpc-core = "14.0"
lazy_static = "1.4"
pin-project = "0.4"
rlp = "0.4"
secp256k1 = { version = "0.17", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uint = "0.8"
web3 = "0.10"
zeroize = "1.1"
