[package]
name = "ethcontract-derive"
version = "0.3.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
description = """
Proc macro for generating type-safe bindings to Ethereum smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
ethcontract-generate = { version = "0.3.0", path = "../generate" }
proc-macro2 = "1.0"
syn = "1.0"

[dev-dependencies]
quote = "1.0"
