[package]
name = "ethcontract-common"
version = "0.12.2"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
description = """
Common types for ethcontract-rs runtime and proc macro.
"""

[dependencies]
ethabi = { git = "https://github.com/taminomara/ethabi", branch = "serialize-contracts" }
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
web3 = { version = "0.16", default-features = false }
