[package]
name = "ethcontract-common"
version = "0.15.3"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract-common"
description = """
Common types for ethcontract-rs runtime and proc macro.
"""

[dependencies]
ethabi = "15.0.0"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev="a425fa747bca69c7aede4d2c2828f7267d79227e", default-features = false }
