[package]
name = "ethcontract-derive"
version = "0.11.3"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
description = """
Proc macro for generating type-safe bindings to Ethereum smart contracts.
"""

[lib]
proc-macro = true

[dependencies]
ethcontract-common = { version = "0.11.3", path = "../ethcontract-common" }
ethcontract-generate = { version = "0.11.3", path = "../ethcontract-generate" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.12"
