[package]
name = "ethcontract-derive"
version ="0.24.0"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract-derive"
description = """
Proc macro for generating type-safe bindings to Ethereum smart contracts.
"""

[features]
default = ["http"]
http = ["ethcontract-generate/http"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
ethcontract-common = { version = "0.24.0", path = "../ethcontract-common" }
ethcontract-generate = { version = "0.24.0", path = "../ethcontract-generate", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.12"
