[package]
name = "ethcontract-generate"
version = "0.12.0"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
description = """
Code generation for type-safe bindings to Ethereum smart contracts.
"""

[dependencies]
anyhow = "1.0"
curl = "0.4"
ethcontract-common = { version = "0.12.0", path = "../ethcontract-common" }
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.12"
url = "2.1"
