[package]
name = "ethcontract-generate"
version = "0.25.4"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract-generate"
description = """
Code generation for type-safe bindings to Ethereum smart contracts.
"""

[features]
default = ["http"]
http = ["curl"]

[dependencies]
anyhow = "1.0"
curl = { version = "0.4", optional = true }
ethcontract-common = { version = "0.25.4", path = "../ethcontract-common" }
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
url = "2.1"
