[package]
name = "ethcontract-mock"
version = "0.15.4"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract-mock"
description = """
Tools for mocking ethereum contracts.
"""

[dependencies]
ethcontract = { version = "0.15.4", path = "../ethcontract" }
hex = "0.4"
mockall = "0.11"
rlp = "0.5"
predicates = "2.0"

[dev-dependencies]
tokio = { version = "1.6", features = ["macros"] }
ethcontract-derive = { version = "0.15.4", path = "../ethcontract-derive" }
