[package]
name = "ethcontract-mock"
version = "0.25.2"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract-mock"
description = """
Tools for mocking ethereum contracts.
"""

[dependencies]
ethcontract = { version = "0.25.2", path = "../ethcontract", default-features = false, features = ["derive"] }
hex = "0.4"
mockall = "0.11"
rlp = "0.5"
predicates = "3.0"

[dev-dependencies]
tokio = { version = "1.6", features = ["macros", "rt"] }
ethcontract-derive = { version = "0.25.2", path = "../ethcontract-derive", default-features = false }
