[package]
name = "ethcontract"
version = "0.25.6"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnosis/ethcontract-rs"
homepage = "https://github.com/gnosis/ethcontract-rs"
documentation = "https://docs.rs/ethcontract"
keywords = ["web3", "ethereum", "contract", "async"]
description = """
Runtime library and proc macro for interacting and generating type-safe bindings
to Ethereum smart contracts.
"""

[lib]
name = "ethcontract"

[features]
aws-kms = ["aws-config", "aws-sdk-kms", "rlp"]
default = ["derive", "http-tls", "ws-tls-tokio", "derive-http"]
derive = ["ethcontract-derive"]
derive-http = ["ethcontract-derive/http"]
http = ["web3/http"]
http-native-tls = ["http", "web3/http-native-tls"]
http-rustls-tls = ["http", "web3/http-rustls-tls"]
http-tls = ["http", "web3/http-tls"]
ipc-tokio = ["web3/ipc-tokio"]
ws-async-std = ["web3/ws-async-std"]
ws-tls-async-std = ["web3/ws-tls-async-std"]
ws-tls-tokio = ["web3/ws-tls-tokio"]
ws-tokio = ["web3/ws-tokio"]

[dependencies]
aws-config = { version = "0.55", optional = true }
aws-sdk-kms = { version = "0.28", optional = true }
arrayvec = "0.7"
ethcontract-common = { version = "0.25.6", path = "../ethcontract-common" }
ethcontract-derive = { version = "0.25.6", path = "../ethcontract-derive", optional = true, default-features = false }
futures = "0.3"
futures-timer = "3.0"
hex = "0.4"
jsonrpc-core = "18.0"
lazy_static = "1.4"
primitive-types = { version = "0.12", features = ["fp-conversion"] }
rlp = { version = "0.5", default-features = false, optional = true }
secp256k1 = { version = "0.27", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uint = "0.9"
web3 = { version = "0.19", default-features = false, features = ["signing"] }
zeroize = "1.1"

[dev-dependencies]
hex-literal = "0.4"
tokio = { version = "1.6", features = ["macros"] }
