[package]
name = "ethcontract-runtime"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"

[dependencies]
ethabi = "8.0"
ethsign = "0.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
lazy_static = "1.4"
rlp = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
web3 = "0.8"
