[package]
name = "examples-generate"
version = "0.0.0"
publish = false
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ethcontract = { path = "../../ethcontract" }
futures = "0.3"
tokio = { version = "1.6", features = ["macros"] }

[build-dependencies]
ethcontract-generate = { path = "../../ethcontract-generate" }
